# rust-remote-fs

./: .gitignore  Cargo.toml  MACOS.md  README.md  macos.md  prog.md
client/: Cargo.toml  README.md  config.toml
client/src/: api_client.rs  config.rs  filesystem.rs  main.rs
client/src/fs/: attr.rs  attr_ops.rs  cache.rs  create.rs  delete.rs  mod.rs  prelude.rs  read.rs  read_ops.rs  rename.rs  write.rs  write_ops.rs  xattr.rs
client/tests/: TEST.md  run-tests.sh
client/tests/cases/: test_01_files.sh  test_02_dirs.sh  test_03_advanced.sh  test_apassed_new.sh  test_new.sh
server/: .gitignore  Cargo.toml  README.md
server/coverage/: tarpaulin-report.html
server/data/: c.txt  file1.txt
server/src/: handlers.rs  main.rs
server/tests/: endpoints.rs
