[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.11.0"
tokio = { version = "1.37.0", features = ["full", "macros"] }
libc = "0.2.155"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0" 
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"
lru = "0.12"
bytes = "1.10.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"